--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -56,7 +56,8 @@
   }
 
   blockquote {
-    @apply m-2;
+    @apply mx-2;
+    @apply my-8;
     @apply px-4;
     @apply border-l-2;
     @apply border-gray-400;
