--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,9 +15,9 @@
 </title>
 
 {{- if .Site.IsServer -}}
-  {{ $style := resources.Get "scss/main.scss" | resources.ToCSS | postCSS (dict "config" "assets/scss/postcss.config.js") }}
+  {{ $style := resources.Get "scss/main.scss" | resources.ToCSS "css/main.css" | postCSS (dict "config" "assets/scss/postcss.config.js") }}
   <link rel="stylesheet" href="{{- $style.Permalink -}}">
 {{- else -}}
-  {{ $style := resources.Get "scss/main.scss" | resources.ToCSS | postCSS (dict "config" "assets/scss/postcss.config.js") | minify | fingerprint }}
-  <link rel="stylesheet" href="{{- $style.Permalink -}}" integrity="{{ $style.Data.Integrity }}">
+  {{ $style := resources.Get "scss/main.scss" | resources.ToCSS "css/main.css" | postCSS (dict "config" "assets/scss/postcss.config.js") | minify }}
+  <link rel="stylesheet" href="{{- $style.Permalink -}}">
 {{- end -}}
