--- a/assets/scss/_prism.scss
+++ b/assets/scss/_prism.scss
@@ -8,8 +8,12 @@ pre[class*="language-"] {
   background: #f6f6f6;
   font-family: Consolas, Monaco, monospace;
 
-	tab-size: 4;
-	hyphens: none;
+  tab-size: 4;
+  hyphens: none;
+
+  .table {
+    display: inline;
+  }
 }
 
 pre[class*="language-"] {
@@ -33,145 +37,145 @@ pre[class*="language-"] {
 }
 
 .token.atrule {
-	color: #7c4dff;
+  color: #7c4dff;
 }
 
 .token.attr-name {
-	color: #39adb5;
+  color: #39adb5;
 }
 
 .token.attr-value {
-	color: #f6a434;
+  color: #f6a434;
 }
 
 .token.attribute {
-	color: #f6a434;
+  color: #f6a434;
 }
 
 .token.boolean {
-	color: #7c4dff;
+  color: #7c4dff;
 }
 
 .token.builtin {
-	color: #39adb5;
+  color: #39adb5;
 }
 
 .token.cdata {
-	color: #39adb5;
+  color: #39adb5;
 }
 
 .token.char {
-	color: #39adb5;
+  color: #39adb5;
 }
 
 .token.class {
-	color: #39adb5;
+  color: #39adb5;
 }
 
 .token.class-name {
-	color: #6182b8;
+  color: #6182b8;
 }
 
 .token.comment {
-	color: #aabfc9;
+  color: #aabfc9;
 }
 
 .token.constant {
-	color: #7c4dff;
+  color: #7c4dff;
 }
 
 .token.deleted {
-	color: #e53935;
+  color: #e53935;
 }
 
 .token.doctype {
-	color: #aabfc9;
+  color: #aabfc9;
 }
 
 .token.entity {
-	color: #e53935;
+  color: #e53935;
 }
 
 .token.function {
-	color: #7c4dff;
+  color: #7c4dff;
 }
 
 .token.hexcode {
-	color: #f76d47;
+  color: #f76d47;
 }
 
 .token.id {
-	color: #7c4dff;
+  color: #7c4dff;
 }
 
 .token.important {
-	color: #7c4dff;
+  color: #7c4dff;
 }
 
 .token.inserted {
-	color: #39adb5;
+  color: #39adb5;
 }
 
 .token.keyword {
-	color: #7c4dff;
+  color: #7c4dff;
 }
 
 .token.number {
-	color: #f76d47;
+  color: #f76d47;
 }
 
 .token.operator {
-	color: #39adb5;
+  color: #39adb5;
 }
 
 .token.prolog {
-	color: #aabfc9;
+  color: #aabfc9;
 }
 
 .token.property {
-	color: #39adb5;
+  color: #39adb5;
 }
 
 .token.pseudo-class {
-	color: #f6a434;
+  color: #f6a434;
 }
 
 .token.pseudo-element {
-	color: #f6a434;
+  color: #f6a434;
 }
 
 .token.punctuation {
-	color: #39adb5;
+  color: #39adb5;
 }
 
 .token.regex {
-	color: #6182b8;
+  color: #6182b8;
 }
 
 .token.selector {
-	color: #e53935;
+  color: #e53935;
 }
 
 .token.string {
-	color: #f6a434;
+  color: #f6a434;
 }
 
 .token.symbol {
-	color: #7c4dff;
+  color: #7c4dff;
 }
 
 .token.tag {
-	color: #e53935;
+  color: #e53935;
 }
 
 .token.unit {
-	color: #f76d47;
+  color: #f76d47;
 }
 
 .token.url {
-	color: #e53935;
+  color: #e53935;
 }
 
 .token.variable {
-	color: #e53935;
+  color: #e53935;
 }
