--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -6,12 +6,12 @@
         <polyline points="12 6 12 12 16 14" />
       </svg>
       <span>
-        {{- i18n "readingTime" .Page.ReadingTime -}}
+        {{ i18n "readingTime" .Page.ReadingTime }}
       </span>
     </div>
     <article class="single">
-      <h1>{{- .Title -}}</h1>
-      {{- .Content -}}
+      <h1>{{ .Title }}</h1>
+      {{ .Content }}
     </article>
     <hr class="my-8 border-gray-400">
     <div class="text-sm text-gray-500">
@@ -24,7 +24,7 @@
           <line x1="16" y1="17" x2="8" y2="17" />
         </svg>
         <span>
-          {{- i18n "wordCount" .Page.WordCount -}}
+          {{ i18n "wordCount" .Page.WordCount }}
         </span>
       </div>
       <div class="flex">
@@ -35,11 +35,11 @@
           <line x1="3" y1="10" x2="21" y2="10"></
         </svg>
         <span>
-          {{- if .Site.Params.dateformNum -}}
-            {{- dateFormat .Site.Params.dateformNum .Date.Local -}}
-          {{- else -}}
-            {{- dateFormat "2006-01-02" .Date.Local -}}
-          {{- end -}}
+          {{ if .Site.Params.dateformNum }}
+            {{ dateFormat .Site.Params.dateformNum .Date.Local }}
+          {{ else }}
+            {{ dateFormat "2006-01-02" .Date.Local }}
+          {{ end }}
         </span>
       </div>
     </div>
