--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
   <div class="w-full my-4">
     <article class="single">
-      <h1>{{- .Title -}}</h1>
-      {{- .Content -}}
+      <h1>{{ .Title }}</h1>
+      {{ .Content }}
     </article>
   </div>
 {{ end }}
