--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -4,7 +4,7 @@ html {
 
 body {
   text-rendering: optimizeLegibility;
-  font-feature-settings: "calt" 0, "tnum", "case", "rlig", "ss03", "cv01", "cv02", "cv03", "cv04", "cv07";
+  font-feature-settings: "calt" 0, "tnum", "case", "rlig", "cv01", "cv02", "cv03", "cv04", "cv07";
 }
 
 ::-webkit-scrollbar {
