--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,10 +1,23 @@
-{{ define "main" }}
-  <div class="flex flex-col my-4 items-center text-gray-600">
-    <h1 class="mb-3 font-bold text-5xl">{{ .Site.Params.Github }}</h1>
-    <a href="https://github.com/{{ .Site.Params.Github }}" target="_blank">
-      <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22" />
-      </svg>
-    </a>
-  </div>
-{{ end }}
+<!DOCTYPE html>
+<html class="font-body antialiased" lang="{{ .Site.Language }}">
+  <head>
+    {{ partial "head.html" . }}
+  </head>
+  <body class="index flex flex-col m-0 p-0 min-w-screen min-h-screen bg-dark-500">
+    {{ partial "header.html" . }}
+
+    <main class="w-full max-w-screen-md m-auto p-4">
+      <div class="flex flex-col my-4 items-center text-dark-100">
+        <h1 class="mb-3 font-bold text-5xl">{{ .Site.Params.Github }}</h1>
+        <a href="https://github.com/{{ .Site.Params.Github }}" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22" />
+          </svg>
+        </a>
+      </div>
+    </main>
+
+    {{ partial "footer.html" . }}
+    {{ partial "javascript.html" . }}
+  </body>
+</html>
