--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <header class="w-full">
-  <nav x-data="{ open: false }" class="bg-gray-800">
+  <nav x-data="{ open: false }" class="bg-dark-600">
     <div class="max-w-screen-md mx-auto px-2">
       <div class="relative flex items-center justify-between h-16">
         <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
@@ -25,12 +25,12 @@
         <div class="hidden sm:block">
           <div class="flex">
             {{ range .Site.Menus.main }}
-              <a href="{{ .URL | absURL }}" class="ml-1 px-3 py-2 text-gray-300 font-medium rounded-md hover:text-white hover:bg-gray-700 transition duration-150 ease-in-out">{{ .Name }}</a>
+              <a href="{{ .URL | absURL }}" class="ml-1 px-3 py-2 text-dark-100 font-medium hover:text-dark-300 transition duration-50 ease-in-out">{{ .Name }}</a>
             {{ end }}
           </div>
         </div>
         <div class="absolute inset-y-0 right-0 flex items-center sm:hidden">
-          <button @click="open = !open" class="inline-flex items-center justify-center p-2 rounded-md text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:bg-gray-700 focus:text-white transition duration-150 ease-in-out">
+          <button @click="open = !open" class="inline-flex items-center justify-center p-2 text-dark-100 hover:text-dark-300 focus:outline-none transition duration-50 ease-in-out">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <line :class="{ 'hidden':  open, 'inline-flex': !open }" x1=" 3" y1="12" x2="21" y2="12" />
               <line :class="{ 'hidden':  open, 'inline-flex': !open }" x1=" 3" y1=" 6" x2="21" y2=" 6" />
@@ -45,7 +45,7 @@
     <div :class="{ block: open, hidden: !open }" class="sm:hidden">
       <div class="px-2 pb-2">
         {{ range .Site.Menus.main }}
-          <a href="{{ .URL | absURL }}" class="block mb-1 px-3 py-2 text-gray-300 font-medium rounded-md hover:text-white hover:bg-gray-700 transition duration-150 ease-in-out">{{ .Name }}</a>
+          <a href="{{ .URL | absURL }}" class="block mb-1 px-3 py-2 text-dark-100 hover:text-dark-300 transition duration-50 ease-in-out">{{ .Name }}</a>
         {{ end }}
       </div>
     </div>
