--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
   <head>
     {{ partial "head.html" . }}
   </head>
-  <body class="index flex flex-col m-0 p-0 min-w-screen min-h-screen bg-dark-500">
+  <body class="codelines flex flex-col m-0 p-0 min-w-screen min-h-screen bg-dark-500">
     {{ partial "header.html" . }}
 
     <main class="w-full max-w-screen-md m-auto p-4">
