--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -1,52 +1,19 @@
+@import "base";
+
 .single {
-  @apply w-full;
-  @apply text-gray-800;
+  @extend .base;
 
   h1, h2, h3, h4, h5, h6 {
     @apply my-4;
-    @apply font-bold;
-    @apply text-gray-600;
   }
-
-  h1 { @apply text-4xl;  }
-  h2 { @apply text-3xl;  }
-  h3 { @apply text-2xl;  }
-  h4 { @apply text-xl;   }
-  h5 { @apply text-lg;   }
-  h6 { @apply text-base; }
 
   p {
     @apply my-4;
   }
 
-  a {
-    @apply underline;
-    @apply transition;
-    @apply duration-150;
-    @apply ease-in-out;
-
-    &:hover {
-      @apply text-blue-500;
-    }
-  }
-
-  figcaption {
-    @apply mt-1;
-    @apply text-sm;
-    @apply text-gray-600
-  }
-
   ul, ol {
     @apply my-4;
     @apply ml-5;
-  }
-
-  ul {
-    @apply list-disc;
-  }
-
-  ol {
-    @apply list-decimal;
   }
 
   @screen sm {
@@ -58,17 +25,6 @@
   blockquote {
     @apply mx-2;
     @apply my-8;
-    @apply px-4;
-    @apply border-l-2;
-    @apply border-gray-400;
-
-    p:first-of-type {
-      @apply mt-0;
-    }
-
-    p:last-of-type {
-      @apply mb-0;
-    }
   }
 
   @screen sm {
@@ -81,8 +37,10 @@
     @apply my-8;
   }
 
-  a[href^="#fn:"] {
-    @apply no-underline;
+  blockquote {
+    @apply px-4;
+    @apply border-l-2;
+    @apply border-gray-400;
   }
 
   a[href^="#fnref:"] {
