--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -1,5 +1,4 @@
 .base {
-  @apply w-full;
   @apply text-dark-200;
 
   h1, h2, h3, h4, h5, h6 {
@@ -33,7 +32,6 @@
   }
 
   table {
-    @apply w-full;
     @apply border-collapse;
   }
 
@@ -45,6 +43,12 @@
 
   th {
     @apply font-bold;
-    @apply text-dark-200;
+    @apply text-dark-100;
+  }
+
+  blockquote {
+    @apply px-4;
+    @apply border-l-2;
+    @apply border-gray-400;
   }
 }
