--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
   <head>
     {{ partial "head.html" . }}
   </head>
-  <body class="flex flex-col m-0 p-0 min-w-screen min-h-screen bg-dark-500">
+  <body class="flex flex-col min-w-screen min-h-screen m-0 p-0 bg-dark-500">
     {{ partial "header.html" . }}
 
     <main class="w-full max-w-screen-md m-auto p-4">
