--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -16,7 +16,7 @@
               <li class="py-3 border-b border-dashed border-dark-400">
                 <a class="flex justify-between" href="{{ .Permalink }}">
                   <span>{{ .Title }}</span>
-                  <span class="text-dark-200">
+                  <span>
                     {{ if .Site.Params.dateformShort }}
                       {{ .Date.Format .Site.Params.dateformShort }}
                     {{ else }}
