--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -25,18 +25,18 @@
         <div class="hidden sm:block">
           <div class="flex">
             {{ range .Site.Menus.main }}
-              <a href="{{ .URL | absURL }}" class="ml-1 px-3 py-2 text-dark-100 font-medium hover:text-dark-300 transition duration-50 ease-in-out">{{ .Name }}</a>
+              <a href="{{ .URL | absURL }}" class="ml-1 px-3 py-2 font-medium text-dark-100 hover:text-dark-300 transition duration-50 ease-in-out">{{ .Name }}</a>
             {{ end }}
           </div>
         </div>
         <div class="absolute inset-y-0 right-0 flex items-center sm:hidden">
           <button @click="open = !open" class="inline-flex items-center justify-center p-2 text-dark-100 hover:text-dark-300 focus:outline-none transition duration-50 ease-in-out">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-              <line :class="{ 'hidden':  open, 'inline-flex': !open }" x1=" 3" y1="12" x2="21" y2="12" />
-              <line :class="{ 'hidden':  open, 'inline-flex': !open }" x1=" 3" y1=" 6" x2="21" y2=" 6" />
-              <line :class="{ 'hidden':  open, 'inline-flex': !open }" x1=" 3" y1="18" x2="21" y2="18" />
-              <line :class="{ 'hidden': !open, 'inline-flex':  open }" x1="18" y1=" 6" x2=" 6" y2="18" />
-              <line :class="{ 'hidden': !open, 'inline-flex':  open }" x1=" 6" y1=" 6" x2="18" y2="18" />
+              <line :class="{ 'hidden': open, 'inline-flex': !open }" x1="3" y1="12" x2="21" y2="12" />
+              <line :class="{ 'hidden': open, 'inline-flex': !open }" x1="3" y1="6" x2="21" y2="6" />
+              <line :class="{ 'hidden': open, 'inline-flex': !open }" x1="3" y1="18" x2="21" y2="18" />
+              <line :class="{ 'hidden': !open, 'inline-flex': open }" x1="18" y1="6" x2="6" y2="18" />
+              <line :class="{ 'hidden': !open, 'inline-flex': open }" x1="6" y1="6" x2="18" y2="18" />
             </svg>
           </button>
         </div>
