update prism and alpine, use vendor dir, extend prism in different script

--- a/layouts/partials/javascript.html
+++ b/layouts/partials/javascript.html
@@ -1,4 +1,5 @@
-{{ $prism := resources.Get "js/prism.js" }}
-{{ $alpine := resources.Get "js/alpine.js" }}
-{{ $script := slice $prism $alpine | resources.Concat "js/main.js" | resources.Minify }}
+{{ $main := resources.Get "js/main.js" }}
+{{ $prism := resources.Get "js/vendor/prism.js" }}
+{{ $alpine := resources.Get "js/vendor/alpine.js" }}
+{{ $script := slice $prism $alpine $main | resources.Concat "js/main.js" | resources.Minify }}
 <script type="text/javascript" src="{{ $script.RelPermalink }}"></script>
