--- a/layouts/partials/favicons.html
+++ b/layouts/partials/favicons.html
@@ -2,6 +2,6 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#00aba9">
-<meta name="msapplication-TileColor" content="#00aba9">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#25cad4">
+<meta name="msapplication-TileColor" content="#25cad4">
 <meta name="theme-color" content="#ffffff">
