--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,23 +1,34 @@
 <header class="w-full">
   <nav x-data="{ open: false }" class="bg-dark-600">
-    <div class="max-w-screen-md mx-auto px-2">
+    <div class="max-w-screen-md mx-auto">
       <div class="relative flex items-center justify-between h-16">
         <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
-          <div class="flex-shrink-0 px-2">
+          <div class="flex-shrink-0">
             <a href="{{ .Site.BaseURL }}">
-              <img class="block h-8 w-auto" src="/icon.svg">
+              <img class="block h-8 px-2 w-auto" src="/icon.svg">
             </a>
           </div>
         </div>
-        <div class="hidden sm:block">
-          <div class="flex">
+        <div class="items-center hidden sm:flex">
+          <div class="flex items-center">
             {{ range .Site.Menus.main }}
-              <a href="{{ .URL | absURL }}" class="ml-1 px-3 py-2 font-medium text-dark-100 hover:text-dark-300">{{ .Name }}</a>
+              <a href="{{ .URL | absURL }}" class="px-3 py-2 font-medium text-dark-100 hover:text-dark-300">{{ .Name }}</a>
             {{ end }}
           </div>
+          <div class="h-6 ml-3 mr-4 border-l-1 border-dark-100"></div>
+          <button @click="toggleTheme()" class="inline-flex p-2 items-center justify-center text-dark-100 hover:text-dark-300 focus:outline-none">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 48 48" fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
+              <path transform="translate(1, 1)" d="M22 41C32.4934 41 41 32.4934 41 22C41 11.5066 32.4934 3 22 3C11.5066 3 3 11.5066 3 22C3 32.4934 11.5066 41 22 41ZM7 22C7 13.7157 13.7157 7 22 7V37C13.7157 37 7 30.2843 7 22Z"/>
+            </svg>
+          </button>
         </div>
-        <div class="absolute inset-y-0 right-0 flex items-center sm:hidden">
-          <button @click="open = !open" class="inline-flex items-center justify-center p-2 text-dark-100 hover:text-dark-300 focus:outline-none">
+        <div class="absolute inset-y-0 right-0 px-2 flex items-center sm:hidden">
+          <button @click="toggleTheme()" class="inline-flex items-center justify-center p-2 text-dark-100 hover:text-dark-300 focus:outline-none">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 48 48" fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
+              <path transform="translate(1, 1)" d="M22 41C32.4934 41 41 32.4934 41 22C41 11.5066 32.4934 3 22 3C11.5066 3 3 11.5066 3 22C3 32.4934 11.5066 41 22 41ZM7 22C7 13.7157 13.7157 7 22 7V37C13.7157 37 7 30.2843 7 22Z"/>
+            </svg>
+          </button>
+          <button @click="open = !open" class="inline-flex ml-2 items-center justify-center p-2 text-dark-100 hover:text-dark-300 focus:outline-none">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <line :class="{ 'hidden': open, 'inline-flex': !open }" x1="3" y1="12" x2="21" y2="12" />
               <line :class="{ 'hidden': open, 'inline-flex': !open }" x1="3" y1="6" x2="21" y2="6" />
