--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <div class="w-full my-4">
-    <div class="flex mb-4 text-sm text-dark-400">
+    <div class="flex mb-4 text-sm text-light-500 dark:text-dark-400">
       <svg class="my-auto mr-3 w-4 h-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
         <circle cx="12" cy="12" r="10" />
         <polyline points="12 6 12 12 16 14" />
@@ -13,8 +13,8 @@
       <h1>{{ .Title }}</h1>
       {{ .Content }}
     </article>
-    <hr class="my-8 border-dark-400">
-    <div class="text-sm text-dark-400">
+    <hr class="my-8 border-light-400 dark:border-dark-400">
+    <div class="text-sm text-light-500 dark:text-dark-400">
       <div class="flex mb-1">
         <svg class="my-auto mr-3 w-4 h-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" />
