--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,11 +3,11 @@
   <head>
     {{ partial "head.html" . }}
   </head>
-  <body class="codelines flex flex-col min-w-screen min-h-screen m-0 p-0 bg-dark-500">
+  <body class="codelines flex flex-col min-w-screen min-h-screen m-0 p-0 bg-white dark:bg-dark-500">
     {{ partial "header.html" . }}
 
     <main class="w-full max-w-screen-md m-auto p-4">
-      <div class="flex flex-col items-center my-4 text-dark-100">
+      <div class="flex flex-col items-center my-4 text-light-900 dark:text-dark-100">
         <h1 class="mb-3 font-bold text-5xl">{{ .Site.Params.Github }}</h1>
         <a href="https://github.com/{{ .Site.Params.Github }}" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
