--- a/layouts/partials/favicons.html
+++ b/layouts/partials/favicons.html
@@ -4,3 +4,4 @@
 <link rel="manifest" href="/site.webmanifest">
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#25cad4">
 <meta name="msapplication-TileColor" content="#25cad4">
+<meta name="theme-color" content="#ffffff">
