--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   <div class="w-full my-4">
     <div class="flex mb-4 text-sm text-light-500 dark:text-dark-400">
-      <svg class="my-auto mr-3 w-4 h-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <svg class="my-auto mr-3 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
         <circle cx="12" cy="12" r="10" />
         <polyline points="12 6 12 12 16 14" />
       </svg>
@@ -13,10 +13,10 @@
       <h1>{{ .Title }}</h1>
       {{ .Content }}
     </article>
-    <hr class="my-8 border-light-400 dark:border-dark-400">
+    <hr class="my-8 border-light-500 dark:border-dark-400">
     <div class="text-sm text-light-500 dark:text-dark-400">
       <div class="flex mb-1">
-        <svg class="my-auto mr-3 w-4 h-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <svg class="my-auto mr-3 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" />
           <polyline points="10 9 9 9 8 9" />
           <polyline points="14 2 14 8 20 8" />
@@ -28,11 +28,11 @@
         </span>
       </div>
       <div class="flex">
-        <svg class="my-auto mr-3 w-4 h-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <svg class="my-auto mr-3 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
-          <line x1="16" y1="2" x2="16" y2="6" />
-          <line x1="8" y1="2" x2="8" y2="6" />
-          <line x1="3" y1="10" x2="21" y2="10" />
+          <line x1="16" y1=" 2" x2="16" y2=" 6" />
+          <line x1=" 8" y1=" 2" x2=" 8" y2=" 6" />
+          <line x1=" 3" y1="10" x2="21" y2="10" />
         </svg>
         <span>
           {{ if .Site.Params.dateformNum }}
