add pulsating icon

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,6 +5,7 @@
 @import "base";
 @import "inter";
 @import "prism";
+@import "pulsate";
 @import "single";
 @import "styles";
 /* purgecss end ignore */
