--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,10 +3,10 @@
   <head>
     {{ partial "head.html" . }}
   </head>
-  <body class="flex flex-col min-w-screen min-h-screen m-0 p-0 bg-white dark:bg-dark-500">
+  <body class="flex flex-col min-w-screen min-h-screen m-0 p-0 bg-base-light dark:bg-base-dark">
     {{ partial "header.html" . }}
 
-    <main class="w-full max-w-screen-md m-auto p-4">
+    <main class="w-full max-w-screen-xl m-auto p-4">
       {{ block "main" . }}
       {{ end }}
     </main>
