--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <div class="my-4">
+  <div class="mx-auto my-4 max-w-screen-md">
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" shape-rendering="crispEdges">
       <rect x=" 4" y=" 0" width="1" height="1" fill="#000000" />
       <rect x=" 5" y=" 0" width="1" height="1" fill="#000000" />
