--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,47 +1,55 @@
 {{ define "main" }}
-  <div class="w-full my-4">
-    <div class="w-full flex mb-4 text-sm text-light-500 dark:text-dark-400">
-      <svg class="my-auto mr-3 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <circle cx="12" cy="12" r="10" />
-        <polyline points="12 6 12 12 16 14" />
-      </svg>
-      <span class="w-full">
-        {{ i18n "readingTime" .Page.ReadingTime }}
-      </span>
-    </div>
-    <article class="single">
-      <h1>{{ .Title }}</h1>
-      {{ .Content }}
-    </article>
-    <hr class="my-8 border-light-400 dark:border-dark-400">
-    <div class="text-sm text-light-500 dark:text-dark-400">
-      <div class="flex mb-1">
-        <svg class="my-auto mr-3 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" />
-          <polyline points="10 9 9 9 8 9" />
-          <polyline points="14 2 14 8 20 8" />
-          <line x1="16" y1="13" x2="8" y2="13" />
-          <line x1="16" y1="17" x2="8" y2="17" />
-        </svg>
-        <span>
-          {{ i18n "wordCount" .Page.WordCount }}
-        </span>
-      </div>
-      <div class="flex">
-        <svg class="my-auto mr-3 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
-          <line x1="16" y1=" 2" x2="16" y2=" 6" />
-          <line x1=" 8" y1=" 2" x2=" 8" y2=" 6" />
-          <line x1=" 3" y1="10" x2="21" y2="10" />
-        </svg>
-        <span>
-          {{ if .Site.Params.dateformNum }}
-            {{ dateFormat .Site.Params.dateformNum .Date.Local }}
-          {{ else }}
-            {{ dateFormat "2006-01-02" .Date.Local }}
-          {{ end }}
-        </span>
+  <div class="w-full flex flex-col mb-4">
+    <h1 class="mb-8 text-center text-polar-night-2 dark:text-snow-storm-2 text-4xl font-bold">{{ .Title }}</h1>
+    <div class="w-11/12 mx-auto px-8 py-4 bg-white dark:bg-polar-night-0 rounded-lg shadow-lg">
+      <div class="single max-w-screen-md mx-auto">
+        {{ .Content }}
       </div>
     </div>
   </div>
+
+<!-- <div class="w-full flex mb-4 text-sm text-light-500 dark:text-dark-400">
+  <svg class="my-auto mr-3 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <circle cx="12" cy="12" r="10" />
+    <polyline points="12 6 12 12 16 14" />
+  </svg>
+  <span class="w-full">
+    {{ i18n "readingTime" .Page.ReadingTime }}
+  </span>
+</div>
+<article class="single">
+  <h1>{{ .Title }}</h1>
+  {{ .Content }}
+</article>
+<hr class="my-8 border-light-400 dark:border-dark-400">
+<div class="text-sm text-light-500 dark:text-dark-400">
+  <div class="flex mb-1">
+    <svg class="my-auto mr-3 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" />
+      <polyline points="10 9 9 9 8 9" />
+      <polyline points="14 2 14 8 20 8" />
+      <line x1="16" y1="13" x2="8" y2="13" />
+      <line x1="16" y1="17" x2="8" y2="17" />
+    </svg>
+    <span>
+      {{ i18n "wordCount" .Page.WordCount }}
+    </span>
+  </div>
+  <div class="flex">
+    <svg class="my-auto mr-3 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
+      <line x1="16" y1=" 2" x2="16" y2=" 6" />
+      <line x1=" 8" y1=" 2" x2=" 8" y2=" 6" />
+      <line x1=" 3" y1="10" x2="21" y2="10" />
+    </svg>
+    <span>
+      {{ if .Site.Params.dateformNum }}
+        {{ dateFormat .Site.Params.dateformNum .Date.Local }}
+      {{ else }}
+        {{ dateFormat "2006-01-02" .Date.Local }}
+      {{ end }}
+    </span>
+  </div>
+</div> -->
+
 {{ end }}
