use lowercase for colors

--- a/assets/scss/_nord.scss
+++ b/assets/scss/_nord.scss
@@ -1,47 +1,31 @@
 // Polar Night
-$nord-0: #2E3440;
-$nord-1: #3B4252;
-$nord-2: #434C5E;
-$nord-3: #4C566A;
-$polar-night-0: $nord-0;
-$polar-night-1: $nord-1;
-$polar-night-2: $nord-2;
-$polar-night-3: $nord-3;
+$polar-night-0: #2e3440;
+$polar-night-1: #3b4252;
+$polar-night-2: #434c5e;
+$polar-night-3: #4c566a;
 
 // Snow Storm
-$nord-4: #D8DEE9;
-$nord-5: #E5E9F0;
-$nord-6: #ECEFF4;
-$snow-storm-0: $nord-4;
-$snow-storm-1: $nord-5;
-$snow-storm-2: $nord-6;
+$snow-storm-0: #d8dee9;
+$snow-storm-1: #e5e9f0;
+$snow-storm-2: #eceff4;
 
 // Frost
-$nord-7: #8FBCBB;
-$nord-8: #88C0D0;
-$nord-9: #81A1C1;
-$nord-10: #5E81AC;
-$frost-0: $nord-7;
-$frost-1: $nord-8;
-$frost-2: $nord-9;
-$frost-3: $nord-10;
+$frost-0: #8fbcbb;
+$frost-1: #88c0d0;
+$frost-2: #81a1c1;
+$frost-3: #5e81ac;
 
 // Aurora
-$nord-11: #BF616A;
-$nord-12: #D08770;
-$nord-13: #EBCB8B;
-$nord-14: #A3BE8C;
-$nord-15: #B48EAD;
-$aurora-0: $nord-11;
-$aurora-1: $nord-12;
-$aurora-2: $nord-13;
-$aurora-3: $nord-14;
-$aurora-4: $nord-15;
+$aurora-0: #bf616a;
+$aurora-1: #d08770;
+$aurora-2: #ebcb8b;
+$aurora-3: #a3be8c;
+$aurora-4: #b48ead;
 
 // Base
 $base-dark: #242933;
-$base-light: #F2F4F8;
+$base-light: #f2f4f8;
 
 // Grey
-$grey-dark: #ABB9CF;
-$grey-light: #7B88A1;
+$grey-dark: #abb9cf;
+$grey-light: #7b88a1;
