--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<header id="header" class="w-full sticky top-0 z-10 select-none">
+<header id="header" class="header-shadow-transition w-full sticky top-0 z-10 select-none">
   <nav x-data="{ open: false, dark: isDarkTheme() }" class="bg-base-light dark:bg-base-dark text-polar-night-3 dark:text-snow-storm-2">
     <div class="max-w-screen-xl mx-auto px-4">
       <div class="relative flex items-center justify-between h-16">
